fix(social-media): :bug: Grid layout issues

--- a/css/pages/connect-social.css
+++ b/css/pages/connect-social.css
@@ -9,10 +9,9 @@
 
 #connect-social {
     position: relative;
+
     /* Fix glitching because of smooth scroll */
     margin-top: -1px;
-    left: 0;
-    right: 0;
 
     padding: 5vh;
     background: #0C0032;
@@ -34,9 +33,10 @@
 
 #connect-social .container {
     height: 50vh;
+    width: 100%;
 
     display: grid;
-    grid-template-columns: 10fr 1fr 10fr 1fr 10fr;
+    grid-template-columns: repeat(2, 10fr 1fr) 10fr;
 
     border-radius: 5px;
     overflow: hidden;
@@ -78,8 +78,9 @@
 }
 
 #connect-social .media {
+    position: relative;
     padding: 10%;
-    margin: -1px;
+    margin: 0 -1px;
 
     display: flex;
     flex-direction: column;
